ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: ingress
  namespace: default
spec:
  rules:
    - host: api.statespace.com
      http:
        paths:
          - backend:
              serviceName: statespace
              servicePort: 5000
            path: /
  tls:
    - hosts:
        - api.statespace.com
      secretName: practice-certs
